kotlin-ide/idea/testData/gradle/importAndCheckHighlighting/macosTargets/src/iosMain/kotlin/sample/ios.kt
package sample

actual class <!LINE_MARKER("descr='Has declaration in common module'")!>Platform<!> actual constructor() {
    actual val <!LINE_MARKER("descr='Has declaration in common module'")!>name<!> = "iOS"
}